Use Stream.toList instead of Collectors